# example-package-jenny-davies

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
docs/: conf.py
src/example_package_jenny_davies/: rescale.py
tests/: test_rescale.py
